# homework_django

./: .env.sample  .gitignore  all_data.json  auth_data.json  data.json  group_data.json  permissions_data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: loads.py
catalog/migrations/: 0001_initial.py  0002_blog_alter_product_image.py  0002_product_manufactured_at.py  0002_product_owner.py  0002_rename_slug_name_product_slug.py  0003_alter_blog_count_views.py  0003_alter_product_owner.py  0003_alter_product_slug.py  0004_alter_blog_options.py  0004_alter_blog_slug.py  0004_alter_product_options.py  0005_alter_blog_created_at_alter_product_create_at_and_more.py  0005_alter_product_owner.py  0006_alter_blog_title.py  0006_alter_product_owner.py  0007_product_published.py  0008_alter_product_options.py
catalog/templates/catalog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_form.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/catalog/: auth.json  catalog.json  cats.json  data.json  prod.json  users.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_alter_user_options.py  0004_alter_user_options.py  0005_alter_user_country.py  0006_user_token.py
(+11 files in other folders)
