[tool.poetry]
name = "django hw192"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
static = "^1.1.1"
ipython = "^8.24.0"
black = "^24.4.2"
django-debug-toolbar = "^4.3.0"
pytils = "^0.4.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
